# StockProjectDos

./: .replit  main.py  pyproject.toml  pytest.ini  run_tests.py  styles.css  test_data.json  test_report.html  test_stock_notifications.py  test_ui.py  utils.py
assets/: test_report.css
static/: styles.css
templates/: test_dashboard.html
tests/: test_stock_notifications.py
