[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "flask>=3.1.0",
    "pandas==2.1.3",
    "plotly>=5.24.1",
    "pytest-html==4.1.1",
    "pytest==7.4.3",
    "requests>=2.32.3",
    "secure-smtplib>=0.1.1",
    "streamlit==1.29.0",
    "yfinance>=0.2.50",
]
